# EventStory

./: README.md  behave.ini  pyproject.toml
docs/: failing-tests.md
docs/stories/: test-story.md
src/eventstory/: greeter.py
tests/acceptance/features/: greeter.feature
tests/acceptance/features/steps/: test_greeter_steps.py
tests/unit/: test_greeter.py
tests/unit/tests/unit/: test_conflict_alert.py
