[project]
name = "eventstory"
version = "0.1.0"
description = ""
authors = [
    {name = "Richard Brammer",email = "69145130+RB-1992@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "eventstory", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
behave = "^1.2.6"
black = "^25.1.0"
mypy = "^1.15.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
